--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
         }
       }
     </script>
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
-    <link rel="stylesheet" href="/styles.css" />
+    
     <header class="header">
       <div class="container navbar">
         <a href="#top" class="brand">Bope – pizzerie comunitară în Dezmir</a>
