--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <main id="top">
       <section class="container hero-section">
         <div class="hero">
-          <img src="/src/assets/hero-pizza.jpg" alt="Pizza napoletană – ingrediente premium" />
+          <img src="src/assets/hero-pizza.jpg" alt="Pizza napoletană – ingrediente premium" />
           <div class="overlay"></div>
           <div class="content">
             <span class="badge">San Marzano • mozzarella fior di latte • ulei extravirgin</span>
@@ -116,7 +116,7 @@
       <!-- PIZZA -->
       <section id="pizza" class="category container section">
         <div class="cat-banner">
-          <img src="/src/assets/cat-pizza.jpg" alt="Categorie pizza – cuptor napoletan" loading="lazy" />
+          <img src="src/assets/cat-pizza.jpg" alt="Categorie pizza – cuptor napoletan" loading="lazy" />
           <div class="tint"></div>
           <div class="text">
             <div>
@@ -216,7 +216,7 @@
       <!-- LIMONADE -->
       <section id="limonade" class="category container section">
         <div class="cat-banner">
-          <img src="/src/assets/cat-lemonade.jpg" alt="Limonade naturale" loading="lazy" />
+          <img src="src/assets/cat-lemonade.jpg" alt="Limonade naturale" loading="lazy" />
           <div class="tint"></div>
           <div class="text">
             <div>
@@ -236,7 +236,7 @@
       <!-- COCKTAILURI -->
       <section id="cocktailuri" class="category container section">
         <div class="cat-banner">
-          <img src="/src/assets/cat-cocktails.jpg" alt="Cocktailuri și băuturi" loading="lazy" />
+          <img src="src/assets/cat-cocktails.jpg" alt="Cocktailuri și băuturi" loading="lazy" />
           <div class="tint"></div>
           <div class="text">
             <div>
