--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       }
     </script>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/x-icon" href="src/assets/favicon.png">
   </head>
 
   <body>
