--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Bope – pizzerie comunitară în Dezmir" />
     <link rel="canonical" href="/" />
 
-    <meta property="og:title" content="Bope – pizzerie comunitară în Dezmir" />
+    <meta property="og:title" content="WELCOME to BOPE – Pizzeria comunitară cu gust de bine!" />
     <meta property="og:description" content="Pizza napoletană cu ingrediente premium, limonade naturale și cocktailuri." />
     <meta property="og:type" content="restaurant" />
     <meta property="og:image" content="/src/assets/hero-pizza.jpg" />
@@ -41,7 +41,7 @@
                 {"@type": "MenuItem", "name": "Pizza Prosciutto Cotto", "description": "sos de roșii, mozzarella, prosciutto cotto", "offers": {"@type": "Offer", "priceCurrency": "RON", "price": "37"}},
                 {"@type": "MenuItem", "name": "Pizza Prosciutto Crudo", "description": "sos de roșii, mozzarella, prosciutto crudo, busuioc", "offers": {"@type": "Offer", "priceCurrency": "RON", "price": "37"}},
                 {"@type": "MenuItem", "name": "Prosciutto Crudo + Rucola", "description": "sos de roșii, mozzarella, prosciutto crudo, rucola, busuioc", "offers": {"@type": "Offer", "priceCurrency": "RON", "price": "38"}},
-                {"@type": "MenuItem", "name": "Pizza Marinara", "description": "sos de roșii, mozzarella, usturoi, oregano, ulei de măsline", "offers": {"@type": "Offer", "priceCurrency": "RON", "price": "35"}},
+                {"@type": "MenuItem", "name": "Pizza Marinara", "description": "sos de roșii, usturoi, oregano, ulei de măsline", "offers": {"@type": "Offer", "priceCurrency": "RON", "price": "35"}},
                 {"@type": "MenuItem", "name": "Pizza Picante", "description": "sos de roșii, mozzarella, salam ventricina", "offers": {"@type": "Offer", "priceCurrency": "RON", "price": "37"}},
                 {"@type": "MenuItem", "name": "Pizza Kids", "description": "sos de roșii, mozzarella, prosciutto cotto, porumb", "offers": {"@type": "Offer", "priceCurrency": "RON", "price": "37"}}
               ]
