--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
           <div class="overlay"></div>
           <div class="content">
             <span class="badge">San Marzano • mozzarella fior di latte • ulei extravirgin</span>
-            <h1>Pizza napoletană cu ingrediente premium</h1>
-            <p>Mic restaurant de cartier, mare la gust. Cuptor bine încins, aluat dospit lent și prospețime în farfurie.</p>
+            <h1>WELCOME to BOPE – Pizzeria comunitară cu gust de bine!</h1>
+            <p>La BOPE, fiecare felie de pizza înseamnă mai mult decât un gust delicios, este o mână de intinsa pentru copii din medii defavorizate.
+Toate fondurile strânse merg direct către Something New, organizația care schimbă destine prin educație, sprijin și oportunități reale.</p>
             <div class="ctas">
               <a class="btn btn-primary" href="#pizza">Vezi meniul</a>
               <a class="btn btn-accent" href="#limonade">Răcorește-te</a>
