--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
           <div class="overlay"></div>
           <div class="content">
             <span class="badge">San Marzano • mozzarella fior di latte • ulei extravirgin</span>
-            <h1>WELCOME to BOPE – Pizzeria comunitară cu gust de bine!</h1>
+            <h1>WELCOME to BOPE</h1>
+            <h1>Pizzeria comunitară cu gust de bine!</h1>
             <p>La BOPE, fiecare felie de pizza înseamnă mai mult decât un gust delicios, este o mână de intinsa pentru copii din medii defavorizate.
 Toate fondurile strânse merg direct către Something New, organizația care schimbă destine prin educație, sprijin și oportunități reale.</p>
             <div class="ctas">
