--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
             <h1 style="text-align: center; font-size: 2.5em; margin: 0;">
               Pizzeria comunitară cu gust de bine!
             </h1>
-            <p>La BOPE, fiecare felie de pizza înseamnă mai mult decât un gust delicios, este o mână de intinsa pentru copii din medii defavorizate.
-Toate fondurile strânse merg direct către Something New, organizația care schimbă destine prin educație, sprijin și oportunități reale.</p>
+            <p>Gust bun. Cauză mare. Pizza ta susține copiii din medii defavorizate prin Asociația Something New.</p>
             <div class="ctas">
               <a class="btn btn-primary" href="#pizza">Vezi meniul</a>
               <a class="btn btn-accent" href="#limonade">Răcorește-te</a>
