--- a/index.html
+++ b/index.html
@@ -109,6 +109,16 @@
                     "price": "37"
                   }
                 },
+              {
+                  "@type": "MenuItem",
+                  "name": "Pizza Salami dolce",
+                  "description": "sos de roșii, mozzarella, salam dulce",
+                  "offers": {
+                    "@type": "Offer",
+                    "priceCurrency": "RON",
+                    "price": "37"
+                  }
+                },
                 {
                   "@type": "MenuItem",
                   "name": "Pizza Kids",
@@ -379,6 +389,18 @@
               <div>
                 <h3>Pizza Picante</h3>
                 <p class="ing">sos de roșii, mozzarella, salam ventricina</p>
+              </div>
+              <div class="right">
+                <div class="price">37 RON</div>
+                <div class="grams">450 g</div>
+              </div>
+            </div>
+          </article>
+          <article class="card">
+            <div class="row">
+              <div>
+                <h3>Pizza Salami Dolce</h3>
+                <p class="ing">sos de roșii, mozzarella, salam dulce</p>
               </div>
               <div class="right">
                 <div class="price">37 RON</div>
