--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     "price": "37"
                   }
                 },
-              {
+                {
                   "@type": "MenuItem",
                   "name": "Pizza Salami dolce",
                   "description": "sos de roșii, mozzarella, salam dulce",
@@ -634,12 +634,23 @@
       document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
         anchor.addEventListener("click", function (e) {
           e.preventDefault();
-          const target = document.querySelector(this.getAttribute("href"));
-          if (target) {
-            target.scrollIntoView({
+          const href = this.getAttribute("href");
+
+          if (href === "#top") {
+            // Special handling for top navigation
+            window.scrollTo({
+              top: 0,
               behavior: "smooth",
-              block: "start",
             });
+          } else {
+            // Regular section navigation
+            const target = document.querySelector(href);
+            if (target) {
+              target.scrollIntoView({
+                behavior: "smooth",
+                block: "start",
+              });
+            }
           }
         });
       });
