Add contact section to index.html and corresponding styles in styles.css for improved user interaction. Includes contact details and location information.

--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
           <a href="#pizza">Pizza</a>
           <a href="#limonade">Limonade</a>
           <a href="#cocktailuri">Cocktailuri</a>
+          <a href="#contact">Contact</a>
         </nav>
         <button class="burger" id="burger" aria-label="Deschide meniul">
           <span></span><span></span><span></span>
@@ -268,6 +269,7 @@
         <a href="#pizza">Pizza</a>
         <a href="#limonade">Limonade</a>
         <a href="#cocktailuri">Cocktailuri</a>
+        <a href="#contact">Contact</a>
       </div>
     </header>
 
@@ -599,6 +601,88 @@
         </div>
       </section>
     </main>
+
+    <!-- CONTACT SECTION -->
+    <section id="contact" class="container section">
+      <div class="cat-banner">
+        <div class="text">
+          <div>
+            <div class="cat-title">Contact</div>
+            <div class="cat-sub">
+              Pentru comenzi de pizza, ne puteți contacta la:
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="contact-grid">
+        <div class="contact-card">
+          <h3>📞 Contact pentru comenzi</h3>
+          <p>Pentru comenzi și rezervări, ne puteți contacta la:</p>
+
+          <div class="contact-person">
+            <div class="person-info">
+              <span class="person-name">Bogdan</span>
+              <span class="person-phone">0730 020 256</span>
+            </div>
+            <div class="contact-actions">
+              <a href="tel:+40730020256" class="contact-link phone-link">
+                <span class="icon">📞</span> Sună
+              </a>
+              <a
+                href="https://wa.me/40730020256?text=Salut! Vreau să comand pizza de la Bope 🍕"
+                target="_blank"
+                class="contact-link whatsapp-link"
+              >
+                <span class="icon">💬</span> WhatsApp
+              </a>
+            </div>
+          </div>
+
+          <div class="contact-person">
+            <div class="person-info">
+              <span class="person-name">Lidia</span>
+              <span class="person-phone">0741 705 921</span>
+            </div>
+            <div class="contact-actions">
+              <a href="tel:+40741705921" class="contact-link phone-link">
+                <span class="icon">📞</span> Sună
+              </a>
+              <a
+                href="https://wa.me/40741705921?text=Salut! Vreau să comand pizza de la Bope 🍕"
+                target="_blank"
+                class="contact-link whatsapp-link"
+              >
+                <span class="icon">💬</span> WhatsApp
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="contact-card">
+          <h3>📍 Locație</h3>
+          <p>Dezmir, Cluj</p>
+
+          <a
+            href="https://maps.app.goo.gl/t1roY7ucJp7dqziN7"
+            target="_blank"
+            class="contact-link location-link"
+          >
+            <span class="icon">🗺️</span> Vezi pe Google Maps
+          </a>
+        </div>
+
+        <div class="contact-card">
+          <h3>🕒 Program</h3>
+          <p><strong>Luni - Vineri</strong></p>
+          <p>09:00 - 14:00</p>
+          <p>17:00 - 21:00</p>
+          <p><strong>Sâmbătă</strong></p>
+          <p>09:00 - 17:00</p>
+          <p><em>Duminică - închis</em></p>
+        </div>
+      </div>
+    </section>
 
     <footer class="footer">
       <div class="container">
