Update Facebook link in footer section of index.html. Clean up whitespace in JavaScript for improved readability.

--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
     <!-- Floating Back to Top Button -->
     <button id="scroll-top" class="scroll-top" aria-label="Înapoi sus">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-        <path d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"/>
+        <path d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z" />
       </svg>
     </button>
 
@@ -702,7 +702,11 @@
           <div class="footer-section">
             <h4>Urmărește-ne</h4>
             <div class="social-links">
-              <a href="#" aria-label="Facebook" class="social-link facebook">
+              <a
+                href="https://www.facebook.com/UsbornebySomethingNew/"
+                aria-label="Facebook"
+                class="social-link facebook"
+              >
                 <svg
                   width="20"
                   height="20"
@@ -811,7 +815,7 @@
 
       // Floating scroll to top button functionality
       const scrollTopBtn = document.getElementById("scroll-top");
-      
+
       // Show button when scrolling down
       window.addEventListener("scroll", () => {
         if (window.pageYOffset > 300) {
