--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
               <div>
                 <h3>Pizza Marinara</h3>
                 <p class="ing">
-                  sos de roșii, mozzarella, usturoi, oregano, ulei de măsline
+                  sos de roșii, usturoi, oregano, ulei de măsline
                 </p>
               </div>
               <div class="right">
